<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/formFragment"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/formTitle"
        android:text="@string/title_form"
        android:textSize="30dp"
        app:layout_constraintBottom_toTopOf="@+id/llOptions"
        app:layout_constraintLeft_toLeftOf="@+id/formFragment"
        app:layout_constraintRight_toRightOf="@+id/formFragment"/>

    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/llOptions"
        app:layout_constraintTop_toTopOf="@+id/formFragment"
        app:layout_constraintLeft_toLeftOf="@+id/formFragment"
        app:layout_constraintRight_toRightOf="@+id/formFragment"
        app:layout_constraintBottom_toBottomOf="@+id/formFragment"
        android:orientation="vertical">

        <CheckBox android:id="@+id/checkbox_uppercase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkbox_uppercase"
            android:onClick="onCheckboxClicked"
            android:layout_marginLeft="50dp"/>

        <CheckBox android:id="@+id/checkbox_lowercase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkbox_lowercase"
            android:onClick="onCheckboxClicked"
            android:layout_marginLeft="50dp"/>

        <CheckBox android:id="@+id/checkbox_numbers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkbox_numbers"
            android:onClick="onCheckboxClicked"
            android:layout_marginLeft="50dp"/>

        <CheckBox android:id="@+id/checkbox_symbols"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkbox_symbols"
            android:onClick="onCheckboxClicked"
            android:layout_marginLeft="50dp"/>


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_form"
            android:id="@+id/generate_btn"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>